--- a/src/pages/Journey.css
+++ b/src/pages/Journey.css
@@ -4,34 +4,10 @@
   margin-top: 50px;
   margin-bottom: 50px;
 }
-.journey-map__parallax {
-  min-height: 50px;
-  background-image: url("faq-kitty.jpg") no-repeat center 50%;
-  background-size: cover;
-  background-color: #e6b89c;
-  position: fixed;
-  width: 100%;
-  z-index: 1;
-}
 .journey-map__form {
   margin-top: 100px;
 }
-.journey-map__header {
-  max-width: 1000px;
-  height: 100%;
-  margin: 0 auto;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  padding-top: 0.5%;
-}
-.journey-map__header > a {
-  margin-right: 12px;
-}
-.journey-map__header > h1 {
-  padding: 100px;
-}
+
 .journey-map__container {
   display: grid;
   min-height: calc(100vh - 50px);
@@ -39,6 +15,12 @@
   max-width: 1000px;
   margin: 0 auto;
   grid-template-columns: 1fr;
+}
+.journey-map__form {
+  box-shadow: 0 5px 20px #c49f88;
+  padding: 2%;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 .journey-map__prompt-question {
   padding: 0 18px;
@@ -48,57 +30,15 @@
   background-color: #e6b89c;
   box-shadow: inset 0 8px 20px #0d0d0d;
 }
-.collapsible {
-  background-color: #c49f88;
-  color: black;
-  cursor: pointer;
-  padding: 18px;
-  width: 100%;
-  border: #0d0d0d;
-  text-align: left;
-  outline: none;
-  font-size: 15px;
-}
-.collapsible:after {
-  content: "\002B";
-  color: white;
-  font-weight: bold;
-  float: right;
-  margin-left: 5px;
-}
-
-.active:after {
-  /*content: "\2212";*/
-}
-.journey-map__cover-letter-real-container {
-  box-shadow: 0 5px 20px #c49f88;
-  padding: 2%;
-  margin-top: 20px;
-  margin-bottom: 200px;
-}
 .journey-map__form-real-container {
   box-shadow: 0 5px 20px #c49f88;
   padding: 2%;
   margin-top: 20px;
   margin-bottom: 20px;
-}
-.journey-map__resume-real-container {
-  box-shadow: 0 5px 20px #c49f88;
-  padding: 2%;
-  margin-top: 20px;
-  margin-bottom: 20px;
-}
-.journey-map__resume-container {
-  margin: auto;
-  padding: 20px;
-  margin-left: 100px;
-}
-.journey-map__resume {
-  border-radius: 20px;
-  box-shadow: 0 5px 20px rgba(0, 0, 0, 0.5);
-}
-.journey-map__cover-letter {
-  padding-top: 20px;
-}
-.journey-map__cover-letter-text {
+
+  display: grid;
+  min-height: calc(100vh - 50px);
+  align-items: center;
+  max-width: 1000px;
+  grid-template-columns: 1fr 2fr;
 }
